--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-> Mark Bogdanov𒉭:
+>
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лабораторная работа 2</title>
+    <title>Лабораторная работа 4</title>
     
     <!-- Подключение Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -115,7 +115,7 @@
     <main class="container py-4">
         <!-- Анкор для навигации -->
         <a id="top"></a>
-        <h1 class="mb-4">Лабораторная работа 2</h1>
+        <h1 class="mb-4">Лабораторная работа 4</h1>
 
 > Mark Bogdanov𒉭:
 <!-- Сетка для секций с изменением порядка на мобильных устройствах -->
@@ -325,7 +325,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">&copy; Богданов Марк 2025</p>
+                    <p class="mb-0">&copy; Запорожец Владислав 2025</p>
                 </div>
             </div>
         </div>
